// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Modal > Snapshots > matches default snapshot 1`] = `
<div
  aria-describedby="modal-description"
  aria-labelledby="modal-title"
  aria-modal="true"
  class="modal modal--animation-default"
  data-testid="modal"
  role="dialog"
>
  <div
    class="modal__content modal__content--size-md modal__content--padding-md"
  >
    <div
      class="modal__content-area"
    >
      <div
        class="modal__header"
      >
        Modal Title
      </div>
      <div>
        Custom content
      </div>
      <div
        class="modal__footer"
      >
        Modal Footer
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal > Snapshots > matches different animation snapshot 1`] = `
<div
  aria-describedby="modal-description"
  aria-labelledby="modal-title"
  aria-modal="true"
  class="modal modal--animation-fast"
  data-testid="modal"
  role="dialog"
>
  <div
    class="modal__content modal__content--size-md modal__content--padding-md"
  >
    <div
      class="modal__content-area"
    >
      <div
        class="modal__header"
      >
        Modal Title
      </div>
      <div>
        Custom content
      </div>
      <div
        class="modal__footer"
      >
        Modal Footer
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal > Snapshots > matches different padding snapshot 1`] = `
<div
  aria-describedby="modal-description"
  aria-labelledby="modal-title"
  aria-modal="true"
  class="modal modal--animation-default"
  data-testid="modal"
  role="dialog"
>
  <div
    class="modal__content modal__content--size-md modal__content--padding-lg"
  >
    <div
      class="modal__content-area"
    >
      <div
        class="modal__header"
      >
        Modal Title
      </div>
      <div>
        Custom content
      </div>
      <div
        class="modal__footer"
      >
        Modal Footer
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal > Snapshots > matches different size snapshot 1`] = `
<div
  aria-describedby="modal-description"
  aria-labelledby="modal-title"
  aria-modal="true"
  class="modal modal--animation-default"
  data-testid="modal"
  role="dialog"
>
  <div
    class="modal__content modal__content--size-lg modal__content--padding-md"
  >
    <div
      class="modal__content-area"
    >
      <div
        class="modal__header"
      >
        Modal Title
      </div>
      <div>
        Custom content
      </div>
      <div
        class="modal__footer"
      >
        Modal Footer
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal > Snapshots > matches disabled state snapshot 1`] = `
<div
  aria-describedby="modal-description"
  aria-labelledby="modal-title"
  aria-modal="true"
  class="modal modal--animation-default"
  data-testid="modal"
  disabled=""
  role="dialog"
>
  <div
    class="modal__content modal__content--size-md modal__content--padding-md"
  >
    <div
      class="modal__content-area"
    >
      <div
        class="modal__header"
      >
        Modal Title
      </div>
      <div>
        Custom content
      </div>
      <div
        class="modal__footer"
      >
        Modal Footer
      </div>
    </div>
  </div>
</div>
`;
